[gd_scene load_steps=18 format=2]

[ext_resource path="res://Assets/UI/DownBox.png" type="Texture" id=1]
[ext_resource path="res://Assets/UI/LeftBorder.png" type="Texture" id=2]
[ext_resource path="res://Assets/Fonts/AlumniSansPinstripe-Regular.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Scripts/BaseCard.gd" type="Script" id=4]
[ext_resource path="res://Assets/UI/Border2.png" type="Texture" id=5]
[ext_resource path="res://Assets/UI/UpBox.png" type="Texture" id=6]
[ext_resource path="res://Assets/UI/Background.png" type="Texture" id=7]
[ext_resource path="res://Assets/UI/Egg.png" type="Texture" id=8]
[ext_resource path="res://Assets/UI/Heart.png" type="Texture" id=9]
[ext_resource path="res://Assets/Ducks/RoboDuck.png" type="Texture" id=10]
[ext_resource path="res://Assets/UI/RightBox.png" type="Texture" id=12]
[ext_resource path="res://Assets/UI/UpBorder.png" type="Texture" id=13]
[ext_resource path="res://Assets/UI/RightBorder.png" type="Texture" id=14]
[ext_resource path="res://Assets/UI/DownBorder.png" type="Texture" id=15]
[ext_resource path="res://Assets/UI/LeftBox.png" type="Texture" id=16]

[sub_resource type="DynamicFont" id=1]
size = 25
outline_size = 1
use_mipmaps = true
use_filter = true
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 25
outline_size = 1
use_mipmaps = true
use_filter = true
font_data = ExtResource( 3 )

[node name="BaseCard" type="Control" groups=["Card"]]
anchor_right = 0.096
anchor_bottom = 0.171
margin_right = -44.32
margin_bottom = -44.68
rect_min_size = Vector2( 184, 184 )
size_flags_horizontal = 0
size_flags_vertical = 0
script = ExtResource( 4 )
up_attack_label_nodepath = NodePath("Background/UpAttack/AttackLabel")
down_attack_label_nodepath = NodePath("Background/DownAttack/AttackLabel")
right_attack_label_nodepath = NodePath("Background/RightAttack/AttackLabel")
left_attack_label_nodepath = NodePath("Background/LeftAttack/AttackLabel")
health_label_nodepath = NodePath("Background/Inner/Health/HealthLabel")
egg_label_nodepath = NodePath("Background/Inner/Eggs/EggLabel")
p1_color = Color( 0.466667, 0.52549, 0.8, 1 )
p2_color = Color( 0.800781, 0.416031, 0.416031, 1 )

[node name="Background" type="TextureRect" parent="." groups=["PlayerColor"]]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 5 )
expand = true

[node name="InnerFrame" type="TextureRect" parent="Background"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 5.0
margin_top = 5.0
margin_right = -5.0
margin_bottom = -5.0
texture = ExtResource( 7 )
expand = true

[node name="UpAttack" type="TextureRect" parent="Background"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -30.0
margin_right = 30.0
margin_bottom = 30.0
rect_min_size = Vector2( 60, 30 )
rect_pivot_offset = Vector2( 20, 10 )
texture = ExtResource( 15 )
expand = true

[node name="TextureRect" type="TextureRect" parent="Background/UpAttack"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 3.0
margin_top = 3.0
margin_right = -3.0
margin_bottom = -3.0
texture = ExtResource( 1 )
expand = true

[node name="AttackLabel" type="Label" parent="Background/UpAttack"]
self_modulate = Color( 0.384314, 0.427451, 0.662745, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 1, 0 )
custom_fonts/font = SubResource( 1 )
text = "10"
align = 1
valign = 1

[node name="DownAttack" type="TextureRect" parent="Background"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -30.0
margin_top = -30.0
margin_right = 30.0
rect_min_size = Vector2( 60, 30 )
rect_pivot_offset = Vector2( 20, 10 )
texture = ExtResource( 13 )
expand = true

[node name="TextureRect" type="TextureRect" parent="Background/DownAttack"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 3.0
margin_top = 3.0
margin_right = -3.0
margin_bottom = -3.0
texture = ExtResource( 6 )
expand = true

[node name="AttackLabel" type="Label" parent="Background/DownAttack"]
self_modulate = Color( 0.384314, 0.427451, 0.662745, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 1, 0 )
custom_fonts/font = SubResource( 1 )
text = "10"
align = 1
valign = 1

[node name="RightAttack" type="TextureRect" parent="Background"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -30.0
margin_top = -30.0
margin_bottom = 30.0
rect_min_size = Vector2( 30, 60 )
rect_pivot_offset = Vector2( 20, 10 )
texture = ExtResource( 14 )
expand = true

[node name="TextureRect" type="TextureRect" parent="Background/RightAttack"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 3.0
margin_top = 3.0
margin_right = -3.0
margin_bottom = -3.0
texture = ExtResource( 12 )
expand = true

[node name="AttackLabel" type="Label" parent="Background/RightAttack"]
self_modulate = Color( 0.384314, 0.427451, 0.662745, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 1, 0 )
custom_fonts/font = SubResource( 1 )
text = "10"
align = 1
valign = 1

[node name="LeftAttack" type="TextureRect" parent="Background"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_top = -30.0
margin_right = 30.0
margin_bottom = 30.0
rect_min_size = Vector2( 30, 60 )
rect_pivot_offset = Vector2( 20, 10 )
texture = ExtResource( 2 )
expand = true

[node name="TextureRect" type="TextureRect" parent="Background/LeftAttack"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 3.0
margin_top = 3.0
margin_right = -3.0
margin_bottom = -3.0
texture = ExtResource( 16 )
expand = true

[node name="AttackLabel" type="Label" parent="Background/LeftAttack"]
self_modulate = Color( 0.384314, 0.427451, 0.662745, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 1, 0 )
custom_fonts/font = SubResource( 1 )
text = "10"
align = 1
valign = 1

[node name="Inner" type="Control" parent="Background"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -80.0
margin_top = -80.0
margin_right = 80.0
margin_bottom = 80.0

[node name="Eggs" type="TextureRect" parent="Background/Inner"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -40.0
margin_top = -40.0
rect_rotation = 5.0
rect_pivot_offset = Vector2( 20, 20 )
texture = ExtResource( 8 )
expand = true

[node name="EggLabel" type="Label" parent="Background/Inner/Eggs"]
self_modulate = Color( 0.588235, 0.552941, 0.482353, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 2 )
text = "10"
align = 1
valign = 1

[node name="Health" type="TextureRect" parent="Background/Inner"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -32.0
margin_right = 38.0
rect_rotation = -5.0
rect_pivot_offset = Vector2( 19, 16 )
texture = ExtResource( 9 )
expand = true

[node name="HealthLabel" type="Label" parent="Background/Inner/Health"]
self_modulate = Color( 0.870588, 0.333333, 0.333333, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 2 )
text = "10"
align = 1
valign = 1

[node name="CardArt" type="TextureRect" parent="Background/Inner"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -65.0
margin_top = -61.0
margin_right = 65.0
margin_bottom = 69.0
texture = ExtResource( 10 )
expand = true
